Fix pagination spacing

--- a/app/styles/components/_pagination.scss
+++ b/app/styles/components/_pagination.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 30px;
+  padding: 30px 20px 10px 30px;
   .controls {
     display: flex;
     justify-content: flex-end;
